--- a/PankKortRekk/bin/KorttiRekisteri/AlkuIkkunaGUIView.fxml
+++ b/PankKortRekk/bin/KorttiRekisteri/AlkuIkkunaGUIView.fxml
@@ -9,26 +9,31 @@
 
 <BorderPane style="-fx-background-color: #000000;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="KorttiRekisteri.AlkuIkkunaGUIController">
     <!-- TODO Add Nodes -->   <center>
-      <Pane prefHeight="200.0" prefWidth="584.0" BorderPane.alignment="CENTER">
+      <Pane prefHeight="200.0" prefWidth="453.0" style="-fx-background-color: #fdf8ed;" BorderPane.alignment="CENTER">
          <children>
-            <TextField alignment="CENTER" editable="false" prefHeight="68.0" prefWidth="584.0" style="-fx-background-color: #00008B; -fx-text-fill: white;" text="PankkikorttiRekisteri v.0.2">
+            <TextField alignment="CENTER" editable="false" prefHeight="75.0" prefWidth="453.0" style="-fx-background-color: #FFF2DA; -fx-text-fill: black;" text="AgoBank - Kortit hallussa">
                <font>
-                  <Font size="32.0" />
+                  <Font name="Mukta Light" size="32.0" />
                </font>
             </TextField>
-            <Button fx:id="Jatka" layoutX="499.0" layoutY="142.0" mnemonicParsing="false" onAction="#SiirryPaaSivulle" style="-fx-background-color: #00008B; -fx-text-fill: white;" text="Jatka">
+            <Button fx:id="Jatka" layoutX="366.0" layoutY="142.0" mnemonicParsing="false" onAction="#SiirryPaaSivulle" style="-fx-background-color: #d5b57c; -fx-text-fill: black;" text="JATKA">
                <font>
-                  <Font size="20.0" />
+                  <Font name="Mukta Regular" size="20.0" />
                </font>
             </Button>
-            <Button fx:id="suljeNappi" layoutX="14.0" layoutY="142.0" mnemonicParsing="false" onAction="#Lopeta" style="-fx-background-color: #00008B; -fx-text-fill: white;" text="Peruuta">
+            <Button fx:id="suljeNappi" layoutX="14.0" layoutY="142.0" mnemonicParsing="false" onAction="#Lopeta" style="-fx-background-color: #d5b57c; -fx-text-fill: black;" text="PERUUTA">
                <font>
-                  <Font size="20.0" />
+                  <Font name="Mukta Regular" size="20.0" />
                </font>
             </Button>
-            <Text fill="WHITE" layoutX="151.0" layoutY="90.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Arno Korhonen &amp; Dani Lobko" wrappingWidth="282.13671875">
+            <Text fontSmoothingType="LCD" layoutX="106.0" layoutY="112.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Arno Korhonen &amp; Dani Lobko" textAlignment="CENTER" wrappingWidth="257.13671875">
                <font>
-                  <Font size="20.0" />
+                  <Font name="October Tamil Regular" size="16.0" />
+               </font>
+            </Text>
+            <Text fontSmoothingType="LCD" layoutX="108.0" layoutY="133.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Versio 1.0." textAlignment="CENTER" wrappingWidth="257.13671875">
+               <font>
+                  <Font name="October Tamil Regular" size="16.0" />
                </font>
             </Text>
          </children>
